fix: 🐛 Adjust width to remove horizontal scrollbar

--- a/apps/webstore/src/app/pages/home/home.component.css
+++ b/apps/webstore/src/app/pages/home/home.component.css
@@ -1,6 +1,6 @@
 /* Main section */
 .main-section {
-  width: 100vw;
+  width: 100%;
   color: white;
 }
 .main-section-container {
